--- a/src/components/Forms/LoginForm/loginForm.module.css
+++ b/src/components/Forms/LoginForm/loginForm.module.css
@@ -9,11 +9,12 @@
     line-height: 1;
 }
 
-.pedeu::after {
+.perdeu::after {
     content: '';
     height: 2px;
     width: 100%;
-    background-color: currentColor;
+    background: currentColor;
+    margin-top: 3px;
     display: block;
 }
 
