feat: user profile + password reset + head + footer

--- a/src/components/Photo/photoContent.module.css
+++ b/src/components/Photo/photoContent.module.css
@@ -12,6 +12,11 @@
     animation: scaleUp .3s forwards;
 }
 
+.single.photo {
+    grid-template-columns: 1fr;
+    height: auto;
+}
+
 @keyframes scaleUp {
     to {
         opacity: initial;
@@ -23,8 +28,18 @@
     padding: 2rem 2rem 0 2rem;
 }
 
+.single .details {
+    padding: 1rem 0 0 0;
+}
+
 .img {
     grid-row: 1/4;
+}
+
+.single .img {
+    grid-auto-flow: 1;
+    border-radius: 0.2rem;
+    overflow: hidden;
 }
 
 .author {
@@ -69,10 +84,6 @@
     width: 2px;
     background: #333;
     margin-top: 5px;
-}
-
-.comments {
-    padding: 0 2rem;
 }
 
 @media(max-width: 64rem) {
