--- a/src/components/Photo/Comments/photoComments.module.css
+++ b/src/components/Photo/Comments/photoComments.module.css
@@ -1,6 +1,11 @@
 .comments {
     overflow-y: auto;
     word-break: break-word;
+    padding: 0 2rem;
+}
+
+.single.comments {
+    padding: 0;
 }
 
 .comments li {
